# mle-enhancement-mlops

./: .gitignore
.github/workflows/: docker-build.yml
endpoint/: Dockerfile  README.md  requirements.txt
endpoint/app/: __init__.py  config.py  main.py
endpoint/app/api/: health.py  predict.py
endpoint/app/models/: base.py  llm_wrapper.py  pytorch_wrapper.py
endpoint/app/services/: feature_service.py  model_service.py
endpoint/config/: config.yaml
ml-pipeline/: README.md  pyproject.toml  requirements.txt.backup  run_pipeline.py
ml-pipeline/components/train/: model_trainer.py
ml-pipeline/config/: pipeline_config.yaml
ml-pipeline/docker/: Dockerfile
ml-pipeline/pipeline/: mlops_pipeline.py
ml-pipeline/src/ml_pipeline/: __init__.py  run_pipeline.py
ml-pipeline/src/ml_pipeline/components/: __init__.py
ml-pipeline/src/ml_pipeline/components/data_load/: data_loader.py
ml-pipeline/src/ml_pipeline/components/evaluation/: __init__.py  model_evaluator.py
ml-pipeline/src/ml_pipeline/components/train/: __init__.py  model_trainer.py
ml-pipeline/src/ml_pipeline/pipeline/: mlops_pipeline.py
model-wrapper/: README.md  cli.py  requirements.txt
model-wrapper/config/: training_config.yaml
model-wrapper/docker/: Dockerfile
model-wrapper/src/: __init__.py
model-wrapper/src/data_loaders/: base.py  local_loader.py
model-wrapper/src/models/: base.py  pytorch_wrapper.py
model-wrapper/src/utils/: config.py  mlflow_utils.py
requirements/: endpoint.md
